--- a/Desktop/project3/css/styles.css
+++ b/Desktop/project3/css/styles.css
@@ -17,3 +17,39 @@
 #portfolio div {
   padding: 10px;
 }
+#contact {
+  background: url("../images/backgrounds/c_image.jpg");
+  padding: 30px;
+}
+.form-control {
+  background: transparent;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 15px;
+}
+#serv {
+  background: url("../images/backgrounds/s_image.jpg");
+  padding: 80px;
+}
+#nice {
+  display: none;
+}
+#btn {
+  background:transparent ;
+  color:white ;
+}
+
+.hidden-desc {
+  display: none;
+}
+
+
+.col-md-3 .hidden-text {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  display: flex; justify-content: center;
+  align-items: center; font-size: xx-large;
+  background-color: rgba(255, 255, 255, 0.5);
+  display: none;
+}
